<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="button_back">Кнопка назад</string>

    <!-- SettingsActivity -->
    <string name="email_student">"dtalievanar@gmail.com"</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_dialog">Привет, посетите нашу страничку: https://practicum.yandex.ru/android-developer/</string>
    <string name="to_share">Поделиться</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <!-- SearchActivity -->
    <string name="not_found">Ничего не нашлось</string>
    <string name="net_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_were_searched">Вы искали</string>

    <!-- PlayerActivity -->
    <string name="length_null" translatable="false">00:00</string>
    <string name="track_name">Track_name</string>
    <string name="artist_name">Artist_name</string>
    <string name="trackLength">Длительность</string>
    <string name="album">Альбом</string>
    <string name="releaseYear">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="invalid_track_data">Не удалось загрузить данные трека</string>

    <!-- MediaActivity -->
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="media_library">Медиатека</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="you_havent_created_any_playlists">Вы не создали \nни одного плейлиста</string>

    <!--New playlist -->
    <string name="new_playlist_text">Новый плейлист</string>
    <string name="name_hint">Название*</string>
    <string name="description">Описание</string>
    <string name="create_new_playlist_text_button">Создать</string>
    <string name="cancel">Отмена</string>

    <string name="complete">Завершить</string>
    <string name="complete_playlist">Завершить создание плейлиста</string>
    <string name="data_lost">Все несохраненные данные будут потеряны</string>
    <string name="add_playlist">Добавлен новый плейлист</string>

    <string name="track_already_added">Трек уже добавлен в плейлист</string>
    <string name="track_added">Добавлено в плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <plurals name="number_of_tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <!--Playlist_info -->

    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">OK</string>
    <string name="share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_ask">Хотите удалить плейлист?</string>
    <string name="notification_empty_playlist">В этом плейлисте нет треков</string>

    <plurals name="minutes_plural">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <plurals name="tracks_plural">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <!--EditPlaylistFragment-->

    <string name="edit_current_playlist">Редактировать</string>
    <string name="save_button_edit">Сохранить</string>

</resources>