<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_backToMain"
            android:layout_width="@dimen/dp_44"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/button_back"
            android:outlineProvider="none"
            app:icon="@drawable/arrow"
            app:iconGravity="end"
            app:iconPadding="@dimen/dp_52"
            app:iconSize="@dimen/dp_24"
            app:iconTint="@color/black" />

        <TextView
            android:id="@+id/textSettings"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yandexsanstextmedium"
            android:text="@string/settings"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_size_22" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_62"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selectTheme"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_weight="1"
                android:text="@string/dark_theme"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/text_size_16"
                tools:fontFamily="@font/yandexsanstextmedium" />

            <Switch
                android:id="@+id/switchTheme"
                android:layout_width="@dimen/dp_56"
                android:layout_height="match_parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_62"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textToShare"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_22"
                android:layout_weight="1"
                android:text="@string/to_share"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/text_size_16"
                android:layout_marginEnd="@dimen/dp_12"
                tools:fontFamily="@font/yandexsanstextmedium"
                app:drawableRightCompat="@drawable/to_share" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_62"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textWriteToSupport"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_22"
                android:layout_weight="1"
                android:text="@string/write_to_support"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/text_size_16"
                android:layout_marginEnd="@dimen/dp_12"
                tools:fontFamily="@font/yandexsanstextmedium"
                app:drawableRightCompat="@drawable/group"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_62"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:id="@+id/textUserAgreement"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_22"
                android:layout_weight="1"
                android:text="@string/user_agreement"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/text_size_16"
                android:layout_marginEnd="@dimen/dp_12"
                tools:fontFamily="@font/yandexsanstextmedium"
                app:drawableRightCompat="@drawable/button"/>

        </LinearLayout>
    </LinearLayout>
