<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".player.ui.PlayerFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/BackgroundPlayerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/back_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_56"
                android:background="@color/transparent"
                android:paddingStart="@dimen/dp_20"
                app:icon="@drawable/arrow"
                app:iconTint="@color/black_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_info_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp_24" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_info_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp_24" />

            <ImageView
                android:id="@+id/track_album_placeholder"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:layout_marginTop="26dp"
                android:background="@color/transparent"
                android:src="@drawable/placeholder_album_player"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="@id/right_info_guideline"
                app:layout_constraintStart_toStartOf="@id/left_info_guideline"
                app:layout_constraintTop_toBottomOf="@id/back_button" />

            <TextView
                android:id="@+id/player_track_name"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:ellipsize="end"
                android:fontFamily="@font/yandex_sans_text_medium"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/track_name"
                android:textColor="@color/black_white"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_22"
                app:layout_constraintEnd_toEndOf="@id/right_info_guideline"
                app:layout_constraintStart_toStartOf="@id/left_info_guideline"
                app:layout_constraintTop_toBottomOf="@id/track_album_placeholder" />

            <TextView
                android:id="@+id/player_artist_name"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:ellipsize="end"
                android:fontFamily="@font/yandex_sans_text_medium"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/artist_name"
                android:textColor="@color/black_white"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toEndOf="@id/right_info_guideline"
                app:layout_constraintStart_toStartOf="@id/left_info_guideline"
                app:layout_constraintTag="ArtistName"
                app:layout_constraintTop_toBottomOf="@id/player_track_name" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/buttons_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="player_artist_name" />

            <ImageButton
                android:id="@+id/add_to_playlist_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/dp_51"
                android:layout_height="@dimen/dp_51"
                android:layout_marginTop="@dimen/dp_54"
                android:background="@color/transparent"
                android:src="@drawable/add_button"
                app:layout_constraintEnd_toStartOf="@id/player_play_track"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/left_info_guideline"
                app:layout_constraintTop_toBottomOf="@id/buttons_barrier" />

            <ImageButton
                android:id="@+id/player_play_track"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/dp_84"
                android:layout_height="@dimen/dp_84"
                android:background="@color/transparent"
                android:src="@drawable/play_button"
                app:layout_constraintBottom_toBottomOf="@id/add_to_playlist_button"
                app:layout_constraintEnd_toStartOf="@id/player_like_track"
                app:layout_constraintStart_toEndOf="@id/add_to_playlist_button"
                app:layout_constraintTop_toTopOf="@id/add_to_playlist_button"
                app:tint="@color/black_white" />

            <ImageButton
                android:id="@+id/player_like_track"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/dp_51"
                android:layout_height="@dimen/dp_51"
                android:background="@color/transparent"
                android:src="@drawable/like_button"
                app:layout_constraintBottom_toBottomOf="@id/add_to_playlist_button"
                app:layout_constraintEnd_toEndOf="@id/right_info_guideline"
                app:layout_constraintStart_toEndOf="@id/player_play_track"
                app:layout_constraintTop_toTopOf="@id/add_to_playlist_button" />

            <TextView
                android:id="@+id/preview_track_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_28"
                android:fontFamily="@font/yandex_sans_text_medium"
                android:gravity="center_horizontal"
                android:text="@string/length_null"
                android:textColor="@color/black_white"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/add_to_playlist_button" />

            <TextView
                android:id="@+id/track_length"
                style="@style/player_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="start"
                android:text="@string/trackLength"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTag="TrackLength"
                app:layout_constraintTop_toBottomOf="@id/preview_track_length" />

            <TextView
                android:id="@+id/track_length_value"
                style="@style/track_info_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="end"
                android:maxLines="1"
                app:layout_constraintBaseline_toBaselineOf="@id/track_length"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/track_length"
                app:layout_constraintTag="TrackLengthValue"
                app:layout_constraintTop_toTopOf="@id/track_length" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/track_length_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="track_length,track_length_value" />

            <TextView
                android:id="@+id/album"
                style="@style/player_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="start"
                android:text="@string/album"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTag="Album"
                app:layout_constraintTop_toBottomOf="@id/track_length" />

            <TextView
                android:id="@+id/album_name"
                style="@style/track_info_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="436dp"
                android:ellipsize="end"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="end"
                android:maxLines="1"
                app:layout_constraintBaseline_toBaselineOf="@id/album"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/album"
                app:layout_constraintTag="AlbumName"
                app:layout_constraintTop_toTopOf="@id/album" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/album_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="album,album_name" />

            <TextView
                android:id="@+id/release_year"
                style="@style/player_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="start"
                android:text="@string/releaseYear"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTag="releaseYear"
                app:layout_constraintTop_toBottomOf="@id/album" />

            <TextView
                android:id="@+id/release_year_value"
                style="@style/track_info_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="end"
                android:maxLines="1"
                app:layout_constraintBaseline_toBaselineOf="@id/release_year"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/release_year"
                app:layout_constraintTag="releaseYearValue"
                app:layout_constraintTop_toTopOf="@id/release_year" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/release_year_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="release_year,release_year_value" />

            <TextView
                android:id="@+id/genre"
                style="@style/player_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="start"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTag="genre"
                app:layout_constraintTop_toBottomOf="@id/release_year" />

            <TextView
                android:id="@+id/genre_value"
                style="@style/track_info_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="end"
                android:maxLines="1"
                app:layout_constraintBaseline_toBaselineOf="@id/genre"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/genre"
                app:layout_constraintTag="genreValue"
                app:layout_constraintTop_toTopOf="@id/genre" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/genre_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="genre,genre_value" />

            <TextView
                android:id="@+id/country"
                style="@style/player_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="start"
                android:paddingBottom="20dp"
                android:text="@string/country"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTag="country"
                app:layout_constraintTop_toBottomOf="@id/genre" />

            <TextView
                android:id="@+id/country_name"
                style="@style/track_info_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:fontFamily="@font/yandex_sans_text_regular"
                android:gravity="end"
                android:maxLines="1"
                app:layout_constraintBaseline_toBaselineOf="@id/country"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/country"
                app:layout_constraintTag="countryName"
                app:layout_constraintTop_toTopOf="@id/country" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/country_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="country,country_name" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlist_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_for_bottom_sheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounder" />

        <TextView
            style="@style/PlaylistBottomSheetModTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/add_to_playlist"
            android:textSize="@dimen/text_size_19" />

        <Button
            android:id="@+id/create_playlist_bottom_sheet_button"
            style="@style/PlayerActivityButtonStyle"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_14" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists_bottom_sheet_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

