<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Base.Theme.PlaylistMaker"
    tools:context=".new_playlist.presentation.NewPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_16">

        <ImageView
            android:id="@+id/back_arrow_new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow"
            app:tint="@color/darkBlue_white" />

        <TextView
            android:id="@+id/new_playlist_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:text="@string/new_playlist_text"
            android:textColor="@color/darkBlue_white"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/back_arrow_new_playlist"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/load_image_cardview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dp_24"
            android:layout_marginTop="42dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_playlist_header">

            <ImageView
                android:id="@+id/load_image_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/load_picture_shape"
                android:contentDescription="INSERT_PICTURE"
                android:scaleType="center"
                android:src="@drawable/load_picture_placeholder" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldName"

            style="@style/TextInputLayoutStyleNewPlaylist"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_image_cardview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name_new_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textColor="@color/black_white"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldDescription"

            style="@style/TextInputLayoutStyleNewPlaylist"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_description_new_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textColor="@color/black_white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/new_playlist_button"
            style="@style/NewPlaylistButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button_background"
            android:text="@string/text_for_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filledTextFieldDescription"
            app:layout_constraintVertical_bias="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>